// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MOB-003: carte plein écran — position, barre de progression et estimation rendus en tokens SIGFA (RNTL snapshot) MOB-003: 5 états CANONIQUES rendus — loading skeleton ≠ empty (snapshot ×5): LiveTicketCard-active 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#0F6B4A",
      "flex": 1,
      "justifyContent": "center",
      "padding": 24,
    }
  }
  testID="live-ticket-called"
>
  <Text
    style={
      {
        "color": "#FBF6EE",
        "fontSize": 25,
        "fontWeight": "700",
        "letterSpacing": 0.5,
        "marginBottom": 12,
        "textAlign": "center",
      }
    }
  >
    Votre tour !
  </Text>
  <Text
    style={
      {
        "color": "#FBF6EE",
        "fontSize": 64,
        "fontWeight": "700",
        "letterSpacing": -1,
        "marginTop": 12,
        "textAlign": "center",
      }
    }
    testID="live-ticket-display-number"
  >
    A-001
  </Text>
  <Text
    style={
      {
        "color": "#FBF6EE",
        "fontSize": 16,
        "marginTop": 16,
        "opacity": 0.92,
        "textAlign": "center",
      }
    }
  >
    Présentez-vous au guichet, c'est à vous.
  </Text>
</View>
`;

exports[`MOB-003: carte plein écran — position, barre de progression et estimation rendus en tokens SIGFA (RNTL snapshot) MOB-003: 5 états CANONIQUES rendus — loading skeleton ≠ empty (snapshot ×5): LiveTicketCard-empty 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FBF8F3",
      "flex": 1,
      "justifyContent": "center",
      "padding": 24,
    }
  }
  testID="live-ticket-empty"
>
  <Text
    style={
      {
        "color": "#6B5D4F",
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    Aucun ticket actif
  </Text>
</View>
`;

exports[`MOB-003: carte plein écran — position, barre de progression et estimation rendus en tokens SIGFA (RNTL snapshot) MOB-003: 5 états CANONIQUES rendus — loading skeleton ≠ empty (snapshot ×5): LiveTicketCard-error 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FBF8F3",
      "flex": 1,
      "justifyContent": "center",
      "padding": 24,
    }
  }
  testID="live-ticket-error"
>
  <Text
    style={
      {
        "color": "#C0362C",
        "fontSize": 16,
        "marginBottom": 16,
        "textAlign": "center",
      }
    }
  >
    Adressez-vous à l'accueil
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#C25A16",
        "borderRadius": 12,
        "elevation": 6,
        "justifyContent": "center",
        "minHeight": 44,
        "opacity": 1,
        "paddingHorizontal": 24,
        "paddingVertical": 12,
        "shadowColor": "#C25A16",
        "shadowOffset": {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.28,
        "shadowRadius": 20,
      }
    }
    testID="live-ticket-retry"
  >
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 16,
          "fontWeight": "700",
        }
      }
    >
      Réessayer
    </Text>
  </View>
</View>
`;

exports[`MOB-003: carte plein écran — position, barre de progression et estimation rendus en tokens SIGFA (RNTL snapshot) MOB-003: 5 états CANONIQUES rendus — loading skeleton ≠ empty (snapshot ×5): LiveTicketCard-idle 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#16110B",
      "flex": 1,
      "paddingHorizontal": 24,
      "paddingVertical": 48,
    }
  }
  testID="live-ticket-idle"
>
  <Text
    style={
      {
        "color": "#B8AB98",
        "fontSize": 14,
        "letterSpacing": 1.5,
        "marginBottom": 12,
        "marginTop": 24,
        "textTransform": "uppercase",
      }
    }
  >
    Votre numéro
  </Text>
  <View
    style={
      {
        "borderRadius": 28,
        "elevation": 10,
        "paddingHorizontal": 16,
        "shadowColor": "#C79A3A",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.45,
        "shadowRadius": 40,
      }
    }
  >
    <Text
      style={
        {
          "color": "#C79A3A",
          "fontSize": 64,
          "fontWeight": "700",
          "letterSpacing": -1,
          "textAlign": "center",
        }
      }
      testID="live-ticket-display-number"
    >
      A-001
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#FBF6EE",
        "fontSize": 16,
        "lineHeight": 24,
        "marginBottom": 32,
        "marginTop": 24,
        "paddingHorizontal": 12,
        "textAlign": "center",
      }
    }
  >
    Détendez-vous, nous vous prévenons dès que votre tour approche.
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(199,154,58,0.10)",
        "borderRadius": 18,
        "flexDirection": "row",
        "marginBottom": 32,
        "paddingHorizontal": 24,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#FBF6EE",
            "fontSize": 25,
            "fontWeight": "700",
          }
        }
        testID="live-ticket-position"
      >
        1
      </Text>
      <Text
        style={
          {
            "color": "#B8AB98",
            "fontSize": 12,
            "marginTop": 4,
          }
        }
      >
        Position dans la file
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "rgba(184,171,152,0.35)",
          "height": 40,
          "marginHorizontal": 16,
          "width": 1,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#FBF6EE",
            "fontSize": 25,
            "fontWeight": "700",
          }
        }
        testID="live-ticket-estimate"
      >
        5
         min
      </Text>
      <Text
        style={
          {
            "color": "#B8AB98",
            "fontSize": 12,
            "marginTop": 4,
          }
        }
      >
        Attente estimée
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "marginTop": 12,
        "width": "100%",
      }
    }
    testID="live-ticket-progress"
  >
    <View
      style={
        {
          "backgroundColor": "rgba(184,171,152,0.25)",
          "borderRadius": 999,
          "height": 10,
          "overflow": "hidden",
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#C79A3A",
            "borderRadius": 999,
            "height": "100%",
            "width": "90%",
          }
        }
      />
    </View>
    <Text
      style={
        {
          "color": "#FBF6EE",
          "fontSize": 14,
          "fontWeight": "600",
          "marginTop": 12,
          "textAlign": "center",
        }
      }
    >
      1 personne(s) devant vous
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#B8AB98",
        "fontSize": 12,
        "marginTop": 24,
        "textAlign": "center",
      }
    }
  >
    Mis à jour toutes les 30 secondes
  </Text>
</View>
`;

exports[`MOB-003: carte plein écran — position, barre de progression et estimation rendus en tokens SIGFA (RNTL snapshot) MOB-003: 5 états CANONIQUES rendus — loading skeleton ≠ empty (snapshot ×5): LiveTicketCard-loading 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FBF8F3",
      "flex": 1,
      "padding": 24,
    }
  }
  testID="live-ticket-skeleton"
>
  <View
    style={
      [
        {
          "backgroundColor": "#F4EEE4",
          "borderRadius": 12,
          "marginBottom": 12,
        },
        {
          "height": 40,
          "marginTop": 32,
          "width": "60%",
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "backgroundColor": "#F4EEE4",
          "borderRadius": 12,
          "marginBottom": 12,
        },
        {
          "height": 20,
          "width": "40%",
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "backgroundColor": "#F4EEE4",
          "borderRadius": 12,
          "marginBottom": 12,
        },
        {
          "height": 16,
          "width": "30%",
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "backgroundColor": "#F4EEE4",
          "borderRadius": 12,
          "marginBottom": 12,
        },
        {
          "height": 10,
          "marginTop": 24,
          "width": "80%",
        },
      ]
    }
  />
  <ActivityIndicator
    color="#C79A3A"
    size="small"
    style={
      {
        "marginTop": 24,
      }
    }
  />
</View>
`;
